ISS-67 # Add '$ONE.OF:[]' functionality with tests (fix)